<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_margin="2dp">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:gravity="center">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/btn_pause"
                    android:id="@+id/btnPause"
                    android:layout_column="2"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/btn_resume"
                    android:id="@+id/btnResume"
                    />
            <Button
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/btn_reload"
                    android:id="@+id/btnReload"
                    />
        </TableRow>
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:gravity="center" android:baselineAligned="false">
            <Button
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/btn_delete"
                    android:id="@+id/btnDelete"
                    android:layout_column="2"
                    />
            <Button
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/btn_edit"
                    android:id="@+id/btnEdit"
                    />
            <Button
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/btn_delete_file"
                    android:id="@+id/btnDeleteFile"
                    />

        </TableRow>
    </TableLayout>
</LinearLayout>